[gd_scene load_steps=5 format=3 uid="uid://b3vxqe2yw5nqm"]

[ext_resource type="Script" path="res://scripts/ui/save_screen.gd" id="1_save"]
[ext_resource type="FontFile" uid="uid://b6r7dxfqw7m1t" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_font_bold"]
[ext_resource type="FontFile" uid="uid://cgtm6q3wwjhm8" path="res://assets/fonts/PixelOperator8.ttf" id="3_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.12, 0.16, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.35, 0.6, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8

[node name="SaveScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_save")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="BackgroundPattern" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.5)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 60.0
offset_right = -80.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="TitleContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_font_bold")
theme_override_font_sizes/font_size = 28
text = "üìÇ Â≠òÊ°£ÁÆ°ÁêÜ"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/TitleContainer"]
modulate = Color(0.4, 0.35, 0.6, 0.6)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="SlotsContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Separator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
modulate = Color(0.4, 0.35, 0.6, 0.4)
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.35, 0.35, 1)
theme_override_font_sizes/font_size = 14
text = "ÂèëÁîüÈîôËØØ"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.7, 0.8, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 16
text = "üîô ËøîÂõû‰∏ªËèúÂçï"

[node name="ConfirmDialog" type="ConfirmationDialog" parent="."]
title = "‚ö†Ô∏è Á°ÆËÆ§Êìç‰Ωú"
initial_position = 1
size = Vector2i(350, 120)
ok_button_text = "‚úì Á°ÆËÆ§"
cancel_button_text = "‚úó ÂèñÊ∂à"
